--- a/src/Mobile/LazyWelfare.AndroidMobile/Properties/AndroidManifest.xml
+++ b/src/Mobile/LazyWelfare.AndroidMobile/Properties/AndroidManifest.xml
@@ -2,8 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="LazyWelfare.AndroidMobile.LazyWelfare.AndroidMobile" android:versionCode="1" android:versionName="1.0" android:installLocation="auto">
 	<uses-sdk android:minSdkVersion="23" android:targetSdkVersion="23" />
 	<application android:allowBackup="true" android:label="小蓝人" android:icon="@drawable/blue_face"></application>
-  <uses-feature android:name="android.hardware.autofocus" />
-  <uses-permission android:name="android.permission.CAMERA" />
+	<activity android:name=".MainActivity" android:screenOrientation="portrait" android:configChanges="orientation|keyboardHidden|screenSize" />
+	<uses-feature android:name="android.hardware.autofocus" />
+	<uses-permission android:name="android.permission.CAMERA" />
 	<uses-permission android:name="android.permission.VIBRATE" />
 	<uses-permission android:name="android.permission.FLASHLIGHT" />
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
