--- a/src/Mobile/LazyWelfare.AndroidUtils/LazyWelfare.AndroidUtils.csproj
+++ b/src/Mobile/LazyWelfare.AndroidUtils/LazyWelfare.AndroidUtils.csproj
@@ -62,6 +62,7 @@
     <Compile Include="View\AnimationListener.cs" />
     <Compile Include="View\AnonymousOnClickListener.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="View\ItemClickListener.cs" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Xamarin.Android.Support.v4">
