--- a/src/Mobile/LazyWelfare.AndroidUtils/LazyWelfare.AndroidUtils.csproj
+++ b/src/Mobile/LazyWelfare.AndroidUtils/LazyWelfare.AndroidUtils.csproj
@@ -59,10 +59,11 @@
     <Compile Include="Graphics\Anonymous.cs" />
     <Compile Include="Parcel\Parcelable.cs" />
     <Compile Include="Parcel\ParcelableCreator.cs" />
-    <Compile Include="View\AnimationListener.cs" />
-    <Compile Include="View\AnonymousOnClickListener.cs" />
+    <Compile Include="Views\AnimationListener.cs" />
+    <Compile Include="Views\AnonymousOnClickListener.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="View\ItemClickListener.cs" />
+    <Compile Include="Views\ViewEvent.cs" />
+    <Compile Include="Views\ItemClickListener.cs" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Xamarin.Android.Support.v4">
