--- a/src/Mobile/LazyWelfare.AndroidCtrls/packages.config
+++ b/src/Mobile/LazyWelfare.AndroidCtrls/packages.config
@@ -3,4 +3,5 @@
   <package id="Xamarin.Android.Support.v4" version="23.4.0.1" targetFramework="monoandroid60" />
   <package id="Xamarin.Android.Support.v7.AppCompat" version="23.4.0.1" targetFramework="monoandroid60" />
   <package id="Xamarin.Android.Support.v7.RecyclerView" version="23.4.0.1" targetFramework="monoandroid60" />
+  <package id="ZXing.Net.Mobile" version="2.0.3.1" targetFramework="monoandroid60" />
 </packages>
